src/index.less
@primary: #382e70;
@secondary: #1097b6;
@brown-logo: #3c2825;
@light-neutral: #eee;
@neutral: #ccc;
@black: #444;
@white: #fff;

*  {
	margin: 0;
	padding: 0;
	color: @black;
	font-size: 16px;
	box-sizing: border-box;
	transition: all 300ms ease-in-out;
	font-family: 'Open Sans', sans-serif;
}
body {
	background: @white;
}
body, header, main, footer {
	width: 100%;
	overflow-x: hidden;
}
p {
	margin: 1rem 0;
}
ul {
	margin-left: 1.5rem;
}
a {
	cursor: pointer;
	color: currentColor;
    text-decoration: none;
	display: inline-block;
}
hr {
	margin: 16px auto;
	border-style: solid;
	border: solid 0.5px @light-neutral;
}
h1 {
	color: @white;
	font-size: 2.5em;
}
h2 {
	color: @white;
	font-size: 2em;
	font-weight: 100;
	strong {
		color: @white;
	}
}
h3 {
	color: @primary;
	font-size: 1.5em;
	margin: 1rem auto;
	text-align: center;
}
// header
header {
	z-index: 1;
	width: 100%;
	display: block;
	position: relative;
	box-shadow: 0 3px 12px rgba(0, 0, 0, 0.3);
}
blockquote {
	font-size: 1.3rem;
	border-left: 2px solid @light-neutral;
	padding: 1rem;
	color: #cacaca;
	font-style: italic;
}
cite {
	color: #cacaca;
	font-weight: lighter;
}
textarea {
	max-width: 100%;
	transition: none;
}
.content {
	margin: auto;
	padding: 3rem 0;
	max-width: 60rem;
}
.content h3 {
	margin: 2rem auto;
	text-align: center;
}
// logo
.logo {
    width: 25%;
	padding: 2rem 0.5rem;
	display: inline-block;
    vertical-align: middle;
	box-sizing: border-box;
	img {
		height: 75px;
	}
}
// connect
.connect a, .connect span {
	color: @white;
}
.connect a {
	padding: 6px;
	background: fade(@primary, 60%);
	// background: rgba(@primary, 0.6);
	&:hover {
		background: none;
		box-sizing: border-box;
		background: fade(@primary, 30%);
		// background: rgba(@primary, 0.3);
	}
}
.connect > div:nth-child(1) > a:nth-child(1) {
	padding: 10px;
}
.connect > div:nth-child(2) > a:nth-child(1) {
	background: #55acee;
}
.connect > div:nth-child(2) > a:nth-child(2) {
	background: #3b5998;
}
.connect > div:nth-child(2) > a:nth-child(3) {
	background: #d94a39;
}
// nav bar
.nav-bar {
	z-index: 1;
	color: black;
	width: 74% !important;
	display: inline-block !important;
	vertical-align: middle !important;
	a {
		width: 100% !important;
		height: 100% !important;
		padding: 1rem 0 !important;
		&:hover {
			color: black;
		}
	}
	> ul > li {
		padding: 0 1rem !important;
	}
}
.nav-list-main {
	background: @white;
	text-align: right !important;
}
.nav-list-sub {
	z-index: 1;
	min-width: 250px;
	background: @white;
	box-shadow: 0px 3px 3px rgba(0,0,0,0.3);
}
// buttons
.button {
	margin: 1rem;
	cursor: pointer;
	font-size: 1rem;
	border-radius: 3px;
	padding: 1rem 2rem;
	text-transform: uppercase;
}
.light-neutral {
	color: @primary;
	background: @light-neutral;
	&:hover {
		background: lighten(@light-neutral, 10%);
	}
}
.primary {
	background: @primary;
	color: @light-neutral;
	&:hover {
		background: lighten(@primary, 10%);
	}
}
.read {
	color: @primary;
	padding: 8px;
	text-align: left;
	font-weight: 100;
	border-radius: 0;
	border-left: 1px solid @primary;
	&:hover {
	    background: none;
	    box-shadow: none;
	    border-left: none;
	    border-bottom: 1px solid @primary;
	}
}
.verify {
	display: block;
	text-align: center;
	position: relative;
	margin-top: -2.3rem;
	text-transform: uppercase;
	a {
		color: @white;
		padding: 1rem;
		border-radius: 4px;
		background: @primary;
		box-shadow: 0 0 5px 1px rgba(0,0,0,0.3);
		&:hover {
			background: lighten(@primary, 10%);
		}
	}
}
// global
.transparent-primary {
	background: fade(@primary, 60%);
	// background: rgba(@primary, 0.6);
}
.transparent-secondary {
	background: fade(@secondary, 60%);
	// background: rgba(@secondary, 0.6);
}
.side-menu {
	ul {
		margin: 0;
		list-style: none;
	}
	li {
		margin: 0.25rem auto;
	}
	ul li a {
		width: 100%;
		height: 100%;
		padding: 0.5rem;
		text-decoration: none;
		display: inline-block;
		&:hover {
			background: @light-neutral;
		}
	}
}
.slider {
	background-color: @light-neutral;
	border-bottom: 1.4rem solid @primary;
	> div {
		transition: all 1s ease-in-out;
		-ms-transition: all 1s ease-in-out;
		-moz-transition: all 1s ease-in-out;
		-webkit-transition: all 1s ease-in-out;
	}
}
.main-image {
	width: 100%;
	height: 300px;
	overflow: hidden;
	text-align: center;
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	background-color: @light-neutral;
	h1 {
		margin-top: 100px;
	}
	h1, h2 {
		color: @white;
		text-shadow: 0px 0px 5px #000;
	}
}
.main-title {
	overflow: hidden;
	max-height: 500px;
	text-align: center;
	position: relative;
	img {
		min-height: 250px;
	}
}
.title-wrap  {
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	height: 80%;
	margin: auto;
	display: block;
	position: absolute;
	> div {
		width: 43%;
		padding: 1rem;
		display: inline-block;
		vertical-align: middle;
		box-sizing: border-box;
	}
	h1, h2 {
		color: @white;
		padding: 1rem;
		font-weight: normal;
	}
	h1 {
		font-size: 2rem;
	}
	h2 {
		font-size: 1rem;
	}
}
.title-wrap > div:nth-child(2) {
	height: 100%;
}
.main-title img {
	top: 0;
	left: 0;
	width: 100%;
}
.contact-widget {
	margin: 0.5rem;
	padding: 0.5rem;
	text-align: center;
	border-radius: 4px;
	background: @secondary;
	a, p, strong {
		color: @white;
	}
}
.brochure-widget {
	margin: 8px;
	padding: 8px;
	background: @primary;
	text-align: center;
	border-radius: 8px;
	p {
		color: @white;
		margin: 4px auto;
		font-weight: 100;
	}
	h3 {
		color: @white;
	}
	a {
		text-decoration: none;
	}
}
.paralax {
	padding: 6%;
	text-align: center;
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	background-attachment: fixed;
	p {
		color: @white;
		margin: auto;
	}
	h3 {
		color: @white;
		margin: 1rem;
	}
}
/* ... */

